page-catalog.html complete

--- a/app/page-catalog.html
+++ b/app/page-catalog.html
@@ -298,6 +298,7 @@
 				<!-- ======= SECTION CATALOG START ======= -->
 				<section class="s-catalog pl-60">
 					<h1 class="section-title">Стеклосетка</h1>
+					<!-- filters -->
 					<div class="filters">
 						<div class="filter filter-sort">
 							<span>Сортировать по:</span>
@@ -342,6 +343,390 @@
 							</div>
 						</div>
 					</div>
+					<!-- /filters -->
+
+					<div class="catalog-wrap">
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+								<div class="cat-item-label hit">Хит</div>
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-1.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label hit">Хит</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-2.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-3.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-4.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage not-available">Нет в наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+								<div class="cat-item-label hit">Хит</div>
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-1.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label hit">Хит</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-2.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-3.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-4.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage not-available">Нет в наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+								<div class="cat-item-label hit">Хит</div>
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-1.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label hit">Хит</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-2.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label stock">Акция</div>
+							</div>
+
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-3.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage">В наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+
+						<!-- cat-item -->
+						<div class="cat-item">
+							<div class="cat-labels-wrap">
+								<div class="cat-item-label new">Новинка</div>
+							</div>
+							<a href="#0" class="cat-item-img">
+								<img src="img/product-img-4.jpg" alt="alt">
+							</a>
+							<div class="cat-item-content">
+								<a href="#0" class="cat-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="cat-item-storage not-available">Нет в наличии</div>
+								<div class="cat-item-priceline">
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
+								</div>
+								<div class="cat-item-bottom">
+									<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"><span>Купить</span></a>
+									<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								</div>
+							</div>
+						</div>
+						<!-- /cat-item -->
+					</div>
+
+
+					<div class="catlist-items-wrap" style="display: none;">
+						<!-- catlist-item -->
+						<div class="catlist-item">
+							<div class="catlist-item-img">
+								<img src="img/product-img-1.jpg" alt="alt">
+							</div>
+							<div class="catlist-item-midline">
+								<a href="#0" class="catlist-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="catlist-item-storage">В наличии</div>
+								<div class="cat-labels-wrap">
+									<div class="cat-item-label stock">Акция</div>
+									<div class="cat-item-label hit">Хит</div>
+									<div class="cat-item-label new">Новинка</div>
+								</div>
+							</div>
+							<div class="catlist-item-priceline">
+								<div class="current"><span>1233</span> &#8381;</div>
+								<div class="old">2999 &#8381;</div>
+							</div>
+							<div class="catlist-item-links">
+								<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"></a>
+								<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+							</div>
+						</div>
+						<!-- /catlist-item -->
+
+						<!-- catlist-item -->
+						<div class="catlist-item">
+							<div class="catlist-item-img">
+								<img src="img/product-img-2.jpg" alt="alt">
+							</div>
+							<div class="catlist-item-midline">
+								<a href="#0" class="catlist-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, voluptatum.</a>
+								<div class="catlist-item-storage">В наличии</div>
+							</div>
+							<div class="catlist-item-priceline">
+								<div class="current"><span>1233</span> &#8381;</div>
+								<div class="old">2999 &#8381;</div>
+							</div>
+							<div class="catlist-item-links">
+								<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"></a>
+								<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+							</div>
+						</div>
+						<!-- /catlist-item -->
+
+						<!-- catlist-item -->
+						<div class="catlist-item">
+							<div class="catlist-item-img">
+								<img src="img/product-img-3.jpg" alt="alt">
+							</div>
+							<div class="catlist-item-midline">
+								<a href="#0" class="catlist-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="catlist-item-storage">В наличии</div>
+							</div>
+							<div class="catlist-item-priceline">
+								<div class="current"><span>1233</span> &#8381;</div>
+								<div class="old">2999 &#8381;</div>
+							</div>
+							<div class="catlist-item-links">
+								<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"></a>
+								<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+							</div>
+						</div>
+						<!-- /catlist-item -->
+
+						<!-- catlist-item -->
+						<div class="catlist-item">
+							<div class="catlist-item-img">
+								<img src="img/product-img-4.jpg" alt="alt">
+							</div>
+							<div class="catlist-item-midline">
+								<a href="#0" class="catlist-item-title">Сетка стеклотканевая фасадная 5*5 (145/кв.м.), 50м.</a>
+								<div class="catlist-item-storage">В наличии</div>
+							</div>
+							<div class="catlist-item-priceline">
+								<div class="current"><span>1233</span> &#8381;</div>
+								<div class="old">2999 &#8381;</div>
+							</div>
+							<div class="catlist-item-links">
+								<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"></a>
+								<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+							</div>
+						</div>
+						<!-- /catlist-item -->
+
+					</div>
+
 				</section>
 				<!-- ======= SECTION CATALOG END ======= -->
 			</div>
