page-delivery.html complete

--- a/app/page-delivery.html
+++ b/app/page-delivery.html
@@ -295,108 +295,41 @@
 				</div>
 				<!-- ======= BREADCRUMBS END ======= -->
 
-				<!-- ======= SECTION P-ABOUT START ======= -->
-				<section class="p-about pl-60">
-					<h1 class="section-title">О компании</h1>
-					<p>Одним из наших главных преимуществ является высокое качество предоставляемой нами продукции.</p>
+				<!-- ======= SECTION ARTICLE START ======= -->
+				<section class="s-article pl-60">
+					<h1 class="section-title">Доставка</h1>
+					<p>Купить стройматериалы в интернет-магазине Купи-Строй можно с доставкой на дом или самовывозом со склада в Москве.</p>
+					<h3>Доставка по Москве и Московской области</h3>
+					<ul>
+						<li>Срок доставки до 7 рабочих дней.</li>
+						<li>Стоимость доставки от 999 рублей.</li>
+						<li>Вы можете заказать разгрузку и подъем строительных материалов. Стоимость такого вида работ рассчитывается нашими менеджерами индивидуально для каждого заказа в зависимости от выгружаемых материалов.</li>
+					</ul>
+					<h3>Доставка в регионы России</h3>
+					<p>Доставка осуществляется посредством транспортных компаний.</p>
+					<h3>Пункт самовывоза в Москве</h3>
+					<p>Самовывоз осуществляется только после предварительного согласования с менеджером интернет - магазина!</p>
 
-					<p>Мы сотрудничаем с производителями строительных и отделочных материалов, отлично зарекомендовавшими себя на отечественном рынке. Весь наш товар отвечает самым жестким требованиям и обладает высокими потребительскими характеристиками. Наша продукция – это новые и современные материалы и приспособления, которые можно использовать при любом виде ремонта. Неважно, будет ли это квартира, офис или загородный коттедж. Как внешние, так и внутренние материалы, предлагаемые нами, устойчивы к механическим повреждениям и не боятся воздействий окружающей среды. Это особенно важно для сурового российского климата.</p>
-					<p>Мы занимаемся оптовой торговлей и практикуем гибкую ценовую политику. Наша компания гарантирует, что у нас вы можете заказать любое количество товара, стоимость которого будет гораздо ниже, чем у большинства конкурентов. Это касается как основных отделочных и строительных материалов, так и аксессуаров. С подобными предметами, как и с другой продукцией, вы можете подробно ознакомиться в нашем интернет-магазине и, при желании, заказать что-либо в Москве или Подмосковье. Доставка осуществляется по обоим этим регионам. Цена же доставки может варьироваться, в зависимости от расположения конечного пункта. В пределах Москвы она будет стоить чуть ниже, чем по области. Более подробно о данной услуге вы можете узнать, посетив соответствующий раздел на нашем сайте.</p>
-					<p>Мы – те дилеры строительных материалов, которые готовы помочь клиенту в выборе подходящей продукции. Если вы думаете о том, чтобы купить оптом какой-либо товар – наши специалисты с удовольствием вас проконсультируют. Вы можете оставить сообщение он-лайн, а можете связаться с нами по телефону. Мы ответим на все интересующие вас вопросы, касающиеся продаж в Москве или Подмосковье. Если вы испытываете какие-либо сомнения насчет того, что вам необходимо, мы с удовольствием поможем вам и в этом аспекте.</p>
-					<p>Наши специалисты дадут вам всю самую необходимую информацию, касающуюся сферы продажи строительных материалов оптом и их цен.</p>
-				</section>
-				<!-- ======= SECTION P-ABOUT END ======= -->
-
-				<!-- ======= SECTION WHY START ======= -->
-				<section class="s-why p-why">
-					<h2 class="section-title">Почему мы?</h2>
-					<div class="why-wrap">
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-1.png" alt="alt">
-							</div>
-							<div class="why-item-title">Срочная доставка</div>
+					<div class="del-wrap">
+						<div class="del-title">Пункт самовывоза:</div>
+						<div class="del-item">
+							<div class="del-item-title">Адрес</div>
+							<div class="del-item-desc">г. Москва, ул. Илимская д. 1Б</div>
 						</div>
-						<!-- /why-item -->
 
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-2.png" alt="alt">
-							</div>
-							<div class="why-item-title">Удобная оплата</div>
-						</div>
-						<!-- /why-item -->
-
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-3.png" alt="alt">
-							</div>
-							<div class="why-item-title">Сертифицированный товар</div>
-						</div>
-						<!-- /why-item -->
-					</div>
-				</section>
-				<!-- ======= SECTION WHY END ======= -->
-
-				<!-- ======= SECTION GALLERY START ======= -->
-				<section class="s-gallery">
-					<h2 class="section-title pl-60">Фотогалерея</h2>
-					<div class="gallery-wrap">
-						<div class="gallery-slider owl-carousel">
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-1.jpg" data-size="1400x800">
-									<img src="img/gallery-img-1.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
-
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-2.jpg" data-size="1400x800">
-									<img src="img/gallery-img-2.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
-
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-3.jpg" data-size="1400x800">
-									<img src="img/gallery-img-3.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
-
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-1.jpg" data-size="1400x800">
-									<img src="img/gallery-img-1.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
-
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-2.jpg" data-size="1400x800">
-									<img src="img/gallery-img-2.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
-
-							<!-- slide start -->
-							<div class="gallery-slide">
-								<a href="img/gallery-img-3.jpg" data-size="1400x800">
-									<img src="img/gallery-img-3.jpg" alt="alt" class="img-responsive">
-								</a>
-							</div>
-							<!-- slide end -->
+						<div class="del-item">
+							<div class="del-item-title">График</div>
+							<div class="del-item-desc">Пн - Пт с 9:00 до 18:00</div>
 						</div>
 					</div>
 				</section>
-				<!-- ======= SECTION GALLERY END ======= -->
+				<!-- ======= SECTION ARTICLE END ======= -->
+
+				<!-- ======= SECTION CONTACTS START ======= -->
+				<section class="s-contacts pl-60">
+					<div id="map" class="map-isnohome" data-att="55.889704" data-long="37.573030" data-zoom="16" data-marker="img/icons/map-marker.svg"></div>
+				</section>
+				<!-- ======= SECTION CONTACTS END ======= -->
 			</div>
 		</div>
 	</div>
