page-contacts.html complete

--- a/app/page-contacts.html
+++ b/app/page-contacts.html
@@ -231,7 +231,7 @@
 
 			</div>
 			<!-- ======= SIDEBAR END ======= -->
-			<div class="content">
+			<div class="content content-main">
 				<!-- ======= HEADER START ======= -->
 				<header class="main-head">
 					<div class="mnu-line">
@@ -286,197 +286,96 @@
 				</header>
 				<!-- ======= HEADER END ======= -->
 
-				<!-- ======= SECTION INTRO START ======= -->
-				<section class="s-intro">
-					<div class="intro-slider owl-carousel">
-						<!-- slide start -->
-						<div class="intro-slide">
-							<div class="intro-slide-content">
-								<h2>Строительные материалы выгодно покупать</h2>
-								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
-							</div>
-							<div class="intro-slide-img">
-								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-							</div>
-						</div>
-						<!-- slide end -->
-
-						<!-- slide start -->
-						<div class="intro-slide">
-							<div class="intro-slide-content">
-								<h2>Строительные</h2>
-								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
-							</div>
-							<div class="intro-slide-img">
-								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-							</div>
-						</div>
-						<!-- slide end -->
-
-						<!-- slide start -->
-						<div class="intro-slide">
-							<div class="intro-slide-content">
-								<h2>Строительные материалы выгодно покупать</h2>
-								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							</div>
-							<div class="intro-slide-img">
-								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-							</div>
-						</div>
-						<!-- slide end -->
-					</div>
-				</section>
-				<!-- ======= SECTION INTRO END ======= -->
-
-				<!-- ======= SECTION BANNER START ======= -->
-				<section class="s-banner" style="background-image: url('img/banner-img.jpg');">
-					<h2 class="section-title">Продажа профиля для гипсокартона</h2>
-					<div class="banner-desc">Профиль потолочный 0,6 мм</div>
-					<a href="#0" class="btn btn-blue">Купить по акционной цене</a>
-				</section>
-				<!-- ======= SECTION BANNER END ======= -->
-
-				<!-- ======= SECTION PRODUCTION START ======= -->
-				<section class="s-production">
-					<h2 class="section-title">Продукция компании "Купи строй"</h2>
-					<div class="production-wrap">
-						<div class="row">
-							<!-- production-item -->
-							<div class="col-xl-3 col-lg-3 col-sm-6 ">
-								<div class="production-item">
-									<div class="production-item-img" style="background-image: url('img/production-img-1.jpg');"></div>
-									<div class="production-item-content">
-										<div class="production-item-title">Строительные материалы</div>
-										<div class="production-item-links">
-											<a href="#0" class="production-item-link">Профиль для ГКЛ</a>
-											<a href="#0" class="production-item-link">Гипсокартонный лист</a>
-											<a href="#0" class="production-item-link">Армированные материалы</a>
-											<a href="#0" class="production-item-link">Пленка</a>
-										</div>
-										<a href="#0" class="more-links">+3 категории</a>
-
-									</div>
-								</div>
-							</div>
-							<!-- /production-item -->
-
-							<!-- production-item -->
-							<div class="col-xl-3 col-lg-3 col-sm-6 ">
-								<div class="production-item">
-									<div class="production-item-img" style="background-image: url('img/production-img-2.jpg');"></div>
-									<div class="production-item-content">
-										<div class="production-item-title">Отделочные материалы</div>
-										<div class="production-item-links">
-											<a href="#0" class="production-item-link">Напольные покрытия</a>
-											<a href="#0" class="production-item-link">Подложка под ламинат и паркет</a>
-											<a href="#0" class="production-item-link">Подвесные потолки</a>
-											<a href="#0" class="production-item-link">Керамическая плитка</a>
-										</div>
-										<a href="#0" class="more-links">+3 категории</a>
-									</div>
-								</div>
-							</div>
-							<!-- /production-item -->
-
-							<!-- production-item -->
-							<div class="col-xl-3 col-lg-3 col-sm-6 ">
-								<div class="production-item">
-									<div class="production-item-img" style="background-image: url('img/production-img-3.jpg');"></div>
-									<div class="production-item-content">
-										<div class="production-item-title">Крепёж</div>
-										<div class="production-item-links">
-											<a href="#0" class="production-item-link">Анкерный крепёж</a>
-											<a href="#0" class="production-item-link">Гвозди</a>
-											<a href="#0" class="production-item-link">Дюбель-Гвозди</a>
-											<a href="#0" class="production-item-link">Саморезы и шурупы</a>
-										</div>
-										<a href="#0" class="more-links">+3 категории</a>
-									</div>
-								</div>
-							</div>
-							<!-- /production-item -->
-
-							<!-- production-item -->
-							<div class="col-xl-3 col-lg-3 col-sm-6 ">
-								<div class="production-item">
-									<div class="production-item-img" style="background-image: url('img/production-img-4.jpg');"></div>
-									<div class="production-item-content">
-										<div class="production-item-title">Дымоходы</div>
-										<div class="production-item-links">
-											<a href="#0" class="production-item-link">Двухконтурная система</a>
-											<a href="#0" class="production-item-link">Одноконтурная система</a>
-										</div>
-<!--										<a href="#0" class="more-links">+3 категории</a>-->
-									</div>
-								</div>
-							</div>
-							<!-- /production-item -->
-						</div>
-					</div>
-				</section>
-				<!-- ======= SECTION PRODUCTION START ======= -->
-
-				<!-- ======= SECTION WHY START ======= -->
-				<section class="s-why">
-					<h2 class="section-title">Почему мы?</h2>
-					<div class="why-wrap">
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-1.png" alt="alt">
-							</div>
-							<div class="why-item-title">Срочная доставка</div>
-						</div>
-						<!-- /why-item -->
-
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-2.png" alt="alt">
-							</div>
-							<div class="why-item-title">Удобная оплата</div>
-						</div>
-						<!-- /why-item -->
-
-						<!-- why-item -->
-						<div class="why-item">
-							<div class="why-item-icon">
-								<img src="img/icons/why-icon-3.png" alt="alt">
-							</div>
-							<div class="why-item-title">Сертифицированный товар</div>
-						</div>
-						<!-- /why-item -->
-					</div>
-				</section>
-				<!-- ======= SECTION WHY END ======= -->
-			</div>
-		</div>
-	</div>
-
-	<!-- ======= SECTION ABOUT START ======= -->
-	<section class="s-about">
-		<img src="img/about-img.png" alt="alt" class="about-img">
-		<div class="page-container">
-			<div class="content">
-				<div class="about-content">
-					<h2 class="section-title">О нас</h2>
-					<p>Возможность выбрать и приобрести стройматериалы для ремонта, не выходя из дома, даст интернет-магазин строительных материалов в Москве. Заказать нужные материалы и инструмент вам поможет компания.</p>
-					<p>Продажа стройматериалов через нашу компанию производится уже не первый год. С 2011 года мы создали постоянную клиентскую базу. Всегда рады принять в наши ряды новичков. Нам дорог любой новый клиент. Всеми льготами, которые предоставляются постоянным клиентам, мы готовы поделиться с новичками. Большую роль играет то, что производитель поставляет товар в срок и надлежащего качества. Наша компания работает только с проверенными производителями и поставщиками. Выбираем самый востребованный на рынке товар.</p>
+				<!-- ======= BREADCRUMBS START ======= -->
+				<div class="breadcrumbs pl-60">
+					<a href="#0">Главная</a>
+					<a href="#0">Промежуточная</a>
+					<a href="#0">Текущая</a>
+					<a href="#0">Lorem ipsum.</a>
 				</div>
+				<!-- ======= BREADCRUMBS END ======= -->
+
+				<!-- ======= SECTION P-CONTACTS START ======= -->
+				<section class="p-contacts pl-60">
+					<h1 class="section-title">Контакты</h1>
+					<div class="p-contacts-wrap">
+						<div class="p-contacts-left">
+							<div class="del-wrap">
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">Адрес</div>
+									<div class="del-item-desc">г. Москва, ул. Илимская д. 1Б</div>
+								</div>
+								<!-- /del-item -->
+
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">ИНН</div>
+									<div class="del-item-desc">7717289519</div>
+								</div>
+								<!-- /del-item -->
+
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">Эл. Почта</div>
+									<div class="del-item-desc">info@kupiistroy.ru</div>
+								</div>
+								<!-- /del-item -->
+
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">ОГРН</div>
+									<div class="del-item-desc">1157746468802</div>
+								</div>
+								<!-- /del-item -->
+
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">Режим работы</div>
+									<div class="del-item-desc">Пн-Пт 9:00 - 18:00</div>
+								</div>
+								<!-- /del-item -->
+
+								<!-- del-item -->
+								<div class="del-item">
+									<div class="del-item-title">Телефон</div>
+									<div class="del-item-desc">
+										<a href="tel:84994041942" class="call">8 (499) 404 19-42</a>
+										<a href="#0" class="recall">Заказать звонок</a>
+									</div>
+								</div>
+								<!-- /del-item -->
+							</div>
+						</div>
+						<div class="p-contacts-right">
+							<form class="contact-form p-contacts-form">
+								<div class="form-labels-wrap">
+									<label>
+										<input type="text" placeholder="Имя" name="Имя" autocomplete="off" data-validation="custom"
+											   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,100}$">
+									</label>
+									<label>
+										<input type="text" class="user-phone" name="Телефон" placeholder="Телефон"
+											   autocomplete="off" data-validation="custom"
+											   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}">
+									</label>
+									<button type="submit" class="btn btn-blue">Оставить заявку</button>
+								</div>
+								<label class="checkbox-label">
+									<input type="checkbox" required checked> <span>Я ознакомлен и согласен с "Условиями сбора и обработки персональных данных"</span>
+								</label>
+							</form>
+						</div>
+					</div>
+				</section>
+				<!-- ======= SECTION P-CONTACTS END ======= -->
+
+				<!-- ======= SECTION CONTACTS START ======= -->
+				<section class="s-contacts">
+					<div id="map" class="map-isnohome" data-att="55.889704" data-long="37.573030" data-zoom="16" data-marker="img/icons/map-marker.svg"></div>
+				</section>
+				<!-- ======= SECTION CONTACTS END ======= -->
 			</div>
-		</div>
-	</section>
-	<!-- ======= SECTION ABOUT END ======= -->
-
-	<div class="page-container">
-		<div class="content">
-			<!-- ======= SECTION CONTACTS START ======= -->
-			<section class="s-contacts">
-				<h2 class="section-title pl-75">Контакты</h2>
-
-				<div id="map" class="map-ishome" data-att="55.889704" data-long="37.573030" data-zoom="16" data-marker="img/icons/map-marker.svg"></div>
-			</section>
-			<!-- ======= SECTION CONTACTS END ======= -->
 		</div>
 	</div>
 
