--- a/app/page-delivery.html
+++ b/app/page-delivery.html
@@ -326,7 +326,7 @@
 				<!-- ======= SECTION ARTICLE END ======= -->
 
 				<!-- ======= SECTION CONTACTS START ======= -->
-				<section class="s-contacts pl-60">
+				<section class="s-contacts">
 					<div id="map" class="map-isnohome" data-att="55.889704" data-long="37.573030" data-zoom="16" data-marker="img/icons/map-marker.svg"></div>
 				</section>
 				<!-- ======= SECTION CONTACTS END ======= -->
